--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <body>
     <div class="container">
         <img src="https://source.unsplash.com/400x300/?working,woman" alt="Working Woman">
+        <marquee class="css" behavior="scroll" direction="down"> This text scrolls from top to bottom. </marquee>
         <h1>Priyanka is a freelancer in web development</h1>
     </div>
 </body>
