--- a/index.html
+++ b/index.html
@@ -3,24 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coder Profile</title>
+    <title>Priyanka's Profile</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        .header img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-        .contact-info {
-            text-align: right;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -38,7 +22,7 @@
         </div>
         
         <div class="section">
-            <h2>Skill Set</h2>
+            <h2>Skills Set</h2>
             <ul>
                 <li>Angular</li>
                 <li>Java</li>
@@ -52,11 +36,13 @@
         </div>
         
         <div class="section">
-            <h2>Organizational Experience</h2>
-            <p>Developer at Aricent</p>
-            <p>Developer at Accenture</p>
-            <p>Developer at Ultimate Kronos Group</p>
-            <p>Developer at Thales</p>
+            <h2>Organizational Experiences</h2>
+			<ul>
+                <li>Developer at Aricent</li>
+                <li>Application Consultant at Accenture</li>
+                <li>Senior Developer at Ultimate Kronos Group</li>
+                <li>Technical Lead Developer at Thaless</li>
+            </ul>
         </div>
     </div>
 </body>
