--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="profile.jpg" alt="Coder Picture">
+            <img src="profile.JPG" alt="Coder Picture">
             <div class="contact-info">
                 <h2>Contact Information</h2>
                 <p>Email: codebypriyankat@gmail.com</p>
