--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li>Developer at Aricent</li>
                 <li>Application Consultant at Accenture</li>
                 <li>Senior Developer at Ultimate Kronos Group</li>
-                <li>Technical Lead Developer at Thaless</li>
+                <li>Technical Lead at Thales</li>
             </ul>
         </div>
     </div>
